cleaner.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cleaner
spec: 
  selector:
    matchLabels:
      ver: one9      
  template:
    metadata:
      labels:
        ver: one9
    spec:
      containers:
        - name: kontener
          image: ubuntu:latest
<<<<<<< HEAD
          command: ['sh', '-c', 'bash /data/cleaner.sh']
=======
          command: ['sh','-c', './data/cleaner.sh']
>>>>>>> 64b8823edbdeb9ee5406b5cb0cc08a11a64109d7
          volumeMounts:
          - name: config
            mountPath: "/data/"
      volumes:
        - name: config
          configMap:
            name: cleaner-config
