cpu-restriction.yml
apiVersion: v1
kind: Namespace
metadata:
  name: new

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpu-restriction
  namespace: new
spec: 
  replicas: 1
  selector: 
    matchLabels:
      cpu: v1
  template:
    metadata: 
      labels:
        cpu: v1
    spec:
      containers:
        - name: cpu
          image: ubuntu:latest
          command: ['sh','-c','while true; do date & sleep 2; done']
        # command: ['sh','-c','apt update && apt-get install bc -y && while true; do echo "scale=1000; a(1)*4" | bc -l & sleep 1; done']
          resources:
            limits:
              cpu: 60m
    #          memory: 200Mi
            requests:
              cpu: 50m
   #           memory: 100Mi
