memory-restriction.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memory
spec:
  selector:
    matchLabels:
      mem: v1
  template:
    metadata:
      labels:
        mem: v1
    spec:
      containers:
        - name: vehicle
          image: ubuntu:latest
          resources: 
            limits: 
              memory: 80Mi
          command: ['sh', '-c', '/data/script.sh']
          volumeMounts:
          - name: dir
            mountPath: /data
      volumes:
        - name: dir
          configMap:
            name: script
            defaultMode: 0777
