sonda-readiness-tcp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonda-tcp
spec:
  selector:
    matchLabels:
      sondatcp: v1
  template:
    metadata:
      labels:
        sondatcp: v1
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          readinessProbe:
            tcpSocket:
              host: 192.168.122.1
              port: 2049
            periodSeconds: 5 
          volumeMounts:
            - mountPath: /data
              name: dir
      volumes:
        - name: dir
          nfs:  
            server: 192.168.122.1
            path: /nfs_share
